--- a/watsonx-orchestrate-adk/.env_template
+++ b/watsonx-orchestrate-adk/.env_template
@@ -5,3 +5,6 @@ export WO_ENTITLEMENT_KEY=<YOUR_ENTITLEMENT_KEY>
 # IBM API KEY
 export WATSONX_APIKEY=<YOUR_WATSONX_API_KEY>
 export WATSONX_SPACE_ID=<YOUR_SPACE_ID>
+# Optional configuration
+#export WATSONX_REGION=us-south
+#export WATSONX_URL=https://${WATSONX_REGION}.ml.cloud.ibm.com
